avoid horizontal scrollbar (with colorpicker)

--- a/src/internal/exploring/toolbar/overflow-menu.css
+++ b/src/internal/exploring/toolbar/overflow-menu.css
@@ -13,6 +13,7 @@
 
 #overflow-menu {
   visibility: hidden; /* disable keyboard navigation */
+  display: none;
   position: absolute;
   left: 100%;
   top: 0;
@@ -48,6 +49,7 @@
 
 #toolbar[data-overflow-menu-visible] #overflow-menu {
   visibility: visible; /* restore keyboard navigation */
+  display: block;
   opacity: 1;
   left: 0;
   margin-left: -40px;
